<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Algeria"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="178dp"
        android:layout_height="129dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="521dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/flagalgeria" />

    <Button
        android:id="@+id/btColera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="48dp"
        android:text="@string/colera"
        app:layout_constraintBottom_toTopOf="@+id/btRift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btRift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="54dp"
        android:text="@string/riftvalley"
        app:layout_constraintBottom_toTopOf="@+id/btMalaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btColera" />

    <Button
        android:id="@+id/btMalaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="234dp"
        android:text="@string/malaria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRift" />

    <Button
        android:id="@+id/btTigerMosquito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="131dp"
        android:text="@string/tiger_mosq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMalaria"
        app:layout_constraintVertical_bias="0.644" />
</androidx.constraintlayout.widget.ConstraintLayout>