<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Angola"
    android:background="@color/teal_200">

    <Button
        android:id="@+id/btCholera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cholera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btYellowfever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="308dp"
        android:text="@string/yellow_fever"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCholera"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btRabbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="140dp"
        android:text="@string/rabbies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btYellowfever"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:layout_height="94dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toTopOf="@+id/btCholera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/angola"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>